[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI2/GameDetails.gd" type="Script" id=1]

[node name="Control" type="Control"]
margin_right = 234.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 229.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 112.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "start time"

[node name="start_time" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 116.0
margin_right = 229.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 229.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 112.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "max players"

[node name="max_players" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 116.0
margin_right = 229.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 229.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 112.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "num players"

[node name="num_players" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 116.0
margin_right = 229.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 229.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 112.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "max turns"

[node name="max_turns" type="Label" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 116.0
margin_right = 229.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 229.0
margin_bottom = 92.0
text = "Join"

[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_Join_pressed"]
